--- a/Share Beauty App/Views/BNF/BNF618SecondTechView.xib
+++ b/Share Beauty App/Views/BNF/BNF618SecondTechView.xib
@@ -26,7 +26,7 @@
             <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QCK-dp-LdP" customClass="BNF618_1TechView" customModule="Share_Beauty_App" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QCK-dp-LdP" customClass="BNF618SecondTechView" customModule="Share_Beauty_App" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="1024" height="513"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="BNFTech2.png" translatesAutoresizingMaskIntoConstraints="NO" id="EwB-Hx-mza">
